# django-avaliacao-01

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  env_copy.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt  roteiro.txt
api/: serializers.py  urls.py  views.py  viewsets.py
api/tests_api/: tests_serializers.py  tests_views.py  tests_viewsets.py
carros_cidade/: asgi.py  settings.py  urls.py  wsgi.py
management_cars_city/: admin.py  apps.py  car_service.py  choices.py  forms.py  models.py  service.py  urls.py  views.py
management_cars_city/migrations/: 0001_initial.py  0002_remove_owner_cars_owner_alter_car_color_and_more.py  0003_alter_person_created.py  0004_alter_person_created.py  0005_alter_car_unique_together.py  0006_alter_car_color_alter_car_model.py  0006_alter_car_color_alter_car_model_and_more.py  0007_alter_person_email.py  0008_alter_person_email.py  0009_alter_car_unique_together.py
management_cars_city/templates/: count_car_owner_id.html  delete_car.html  index_first.html  owner_car_id.html  owner_cars.html  person_cars.html  persons.html  register_car.html  register_person.html  sales_opportunity.html  sales_opportunity_id.html  search.html  update_person.html
management_cars_city/tests/: test_service.py  tests_  tests_models.py  tests_urls.py  tests_views.py
templates/: base.html  base_person.html  initial_page.html
templates/partials/: _head.html  _nav.html  js.html
templates/static/css/: login.css
