[tool.poetry]
name = "django-avaliacao-01"
version = "0.1.0"
description = ""
authors = ["igorsenna <engenheirostrauss2@gmail.com>"]
readme = "README.md"
packages = [{include = "django_avaliacao_01"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
